--- a/src/styles/shared/global.scss
+++ b/src/styles/shared/global.scss
@@ -5,8 +5,13 @@ html, body {
 }
 
 body {
+  scrollbar-width: none;
+  scroll-behavior: smooth;
   margin: 0;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
