--- a/src/styles/shared/layout.scss
+++ b/src/styles/shared/layout.scss
@@ -1,23 +1,16 @@
 @charset 'utf-8';
 
-@import 'node_modules/bulma/sass/utilities/mixins.sass';
-
-// Breakpoints
-
-$gap: 16px;
-$tablet: 600px;
-
-$section-padding: $gap;
-$section-padding-desktop: 2 * $gap;
-
-$navbar-height: 4rem;
-$navside-navbar-width: 7rem;
-$navbar-breakpoint: $tablet;
-$navside-breakpoint: $desktop;
-$navbar-margin: 0.75em;
-
 // Custom Containers
 
+.main-window {
+  height: 100%;
+  overflow: hidden;
+}
+.main-container {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
 .pad-gap {
   padding: $gap;
 
