--- a/src/styles/app/theme-overrides.scss
+++ b/src/styles/app/theme-overrides.scss
@@ -1,5 +1,6 @@
 @charset 'utf-8';
 
+@import 'styles/shared/theme-overrides/breadcrumbs.scss';
 @import 'styles/shared/theme-overrides/buttons.scss';
 @import 'styles/shared/theme-overrides/forms.scss';
 @import 'styles/shared/theme-overrides/navbar.scss';
