--- a/src/styles/shared/components/progress.scss
+++ b/src/styles/shared/components/progress.scss
@@ -1,7 +1,11 @@
 @charset 'utf-8';
 
-.turbo-progress-bar {
-  background-color: $primary;
+.progress.is-body-background {
+  background: $body-background-color;
+}
+
+.progress.is-body-background::-webkit-progress-bar {
+  background: $body-background-color;
 }
 
 form .control input[type="submit"] + progress {
