--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -19,9 +19,9 @@
 // Shared
 @import 'styles/shared/theme.vars.scss';
 
-// Application-specific Bulma imports
-@import 'styles/app/bulma.scss';
+// Bulma imports
+@import 'node_modules/bulma/bulma.sass';
 
 // Overrides & components
-@import 'styles/app/theme-overrides.scss';
-@import 'styles/app/components.scss';
+@import 'styles/shared/theme-overrides/_all.scss';
+@import 'styles/shared/components/_all.scss';
